--- a/Website/main.css
+++ b/Website/main.css
@@ -42,8 +42,9 @@ body {
 	display: block;
 	margin-left: auto;
 	margin-right: auto;
-	width: 50%;
 	border-radius: 50%;
+	width: 300px;
+	height: 300px;
 }
 #mainText{
 	text-align: center;
