--- a/Website/Info/main.css
+++ b/Website/Info/main.css
@@ -1,3 +1,12 @@
 body {
 	
 }
+body p {
+    margin: 40px;
+}
+@media (min-width: 1200px) {
+	body p {
+        margin-left: 200px;
+        margin-right: 200px;
+    }
+}
