--- a/Website/main.css
+++ b/Website/main.css
@@ -9,7 +9,6 @@ body {
 	margin-right: auto;
 	width: 50%;
 	border-radius: 50%;
-
 }
 @media (min-width: 1200px) {
 	#roastBotImg {
@@ -26,4 +25,30 @@ body {
 #mainText a{
 	color: #3399ff;
 	text-decoration: none;
+}
+#footer {
+	background-color: #f2f2f2;
+	width: 100%;
+	height: 200px;
+	opacity: 0.5;
+}
+#footer p {
+	text-align: center;
+	padding: 5%;
+}
+#images {
+	width: 50%;
+	margin-left: auto;
+	margin-right: auto;
+}
+#footer div img {
+	width: 40px;
+	height: 40px;
+	margin-left: 10px;
+
+}
+#footer div img:nth-child(2) {
+	border-radius: 50%;
+	width: 42px;
+	height: 42px;
 }
