--- a/Website/Command-Help/main.css
+++ b/Website/Command-Help/main.css
@@ -1,6 +1,20 @@
 body {
-	
+	color: #404040;
 }
 body p {
 	margin: 40px;
+}
+#footer {
+	background-color: #f2f2f2;
+	width: 100%;
+	height: 125px;
+	opacity: 0.5;
+}
+#footer p {
+	text-align: center;
+	padding-top: 40px;
+}
+p span {
+	color: #ff8200;
+	font-size: 20px;
 }
