--- a/Website/Commands/main.css
+++ b/Website/Commands/main.css
@@ -1,6 +1,20 @@
 body {
-	
+	color: #404040;
 }
 body p {
 	margin: 40px;
+}
+body ul li i {
+	color: #ff8200;
+	font-weight: 700;
+}
+#footer {
+	background-color: #f2f2f2;
+	width: 100%;
+	height: 125px;
+	opacity: 0.5;
+}
+#footer p {
+	text-align: center;
+	padding-top: 40px;
 }
