--- a/Website/Commands/main.css
+++ b/Website/Commands/main.css
@@ -8,6 +8,9 @@ body ul li i {
 	color: #ff8200;
 	font-weight: 700;
 }
+body ul {
+	padding-left: 60px;
+}
 #footer {
 	background-color: #f2f2f2;
 	width: 100%;
